2001-09-18  Havoc Pennington  <hp@redhat.com>

	* libgnomevfs/gnome-vfs-private.h: update modules locations

	* modules/Makefile.am (modulesdir): put modules in a new directory
	(modulesconfdir): put modules conf in a new directory

	* gnome-vfs-2.0.pc.in (Cflags): update

	* libgnomevfs/Makefile.am (libgnomevfsincludedir): move headers 
	into gnome-vfs-2.0 subdir

2001-09-10  Frank Belew  <frb@ximian.com>

	* configure.in: add check for librt for semaphore functions
	(fixes undefined references on solaris)

2001-09-07  Darin Adler  <darin@bentspoon.com>

	* libgnomevfs-pthread/gnome-vfs-job.c: Remove a stray include.

2001-09-07  Maciej Stachowiak  <mjs@noisehavoc.org>

	* doc/Makefile.am: Fix stamp creation so the docs get built only
	when something actually changes, not every single time.

2001-09-06  Darin Adler  <darin@bentspoon.com>

	* modules/ftp-method.c: (do_path_command): Fix leak.
	(do_transfer_command): Simplify code.
	(do_path_transfer_command): Fix leak.
	(ftp_connection_create): Fix leak of uri in many cases and of
	response_buffer in one case.
	(my_str_hash): Simplify code.
	(my_str_equal): Simplify code.
	(ftp_connection_acquire): Formatting tweak.
	(do_get_file_info): Fix leak in the ERROR_NOT_FOUND case.
	(vfs_module_init): Remove gconf initialization since this module
	doesn't use gconf.

2001-09-07  Maciej Stachowiak  <mjs@noisehavoc.org>

	Fixed many problems in the in-line and out-of-line docs that were
	causing doc build warnings (most indicative of problems in the
	genrated docs). Recategorize things a bit.
	
	* doc/Makefile.am:
	* doc/about.sgml:
	* doc/gnome-vfs-docs.sgml:
	* doc/gnome-vfs-sections.txt:
	* doc/tmpl/backend.sgml:
	* doc/tmpl/directory.sgml:
	* doc/tmpl/find-directory.sgml:
	* doc/tmpl/fnmatch.sgml:
	* doc/tmpl/gnome-vfs-unused.sgml:
	* doc/tmpl/init.sgml:
	* doc/tmpl/mime-info.sgml:
	* doc/tmpl/module-callback-private.sgml:
	* doc/tmpl/seekable.sgml:
	* doc/tmpl/standard-callbacks.sgml:
	* doc/tmpl/xfer.sgml: