@@ -72,8 +72,10 @@
 0	string		\x89PNG					image/png
 0	string		8BPS\ \ \000\000\000\000 &0xffffffff0000ffffffff image/x-psd
 
-# Desktop file support
-0:32	string		[Desktop\ Entry]			application/x-gnome-app-info
+# Desktop file support - slightly wrong, since comments can be before 
+# the [Desktop Entry] line in the current spec - probably should fix 
+# desktop entry spec to allow this 
+0:32   string          [Desktop\ Entry]                        application/x-gnome-app-info
 
 # special Nautilus link type
 0:32	string		\<nautilus_object\ nautilus_link	application/x-nautilus-link
