@@ -32,3 +32,11 @@ ssh: ssh
 
 # The various access methods implemented by the extfs system.
 a ar arj cpio deb hp48 lha mailfs patchfs rar rpm rpms trpm zip zoo: extfs
+
+# and the desktop module
+preferences: libdesktop.so
+system-settings: libdesktop.so
+server-settings: libdesktop.so
+favorites: libdesktop.so
+start-here: libdesktop.so
+programs: libdesktop.so
